tests/ui/consts/const-closure-in-trait-impl.stderr
error: cannot use `const` closures outside of const contexts
  --> $DIR/const-closure-in-trait-impl.rs:19:16
   |
LL |         self.a(const || {});
   |                ^^^^^

error[E0277]: the trait bound `{closure@$DIR/const-closure-in-trait-impl.rs:19:16: 19:24}: [const] Fn()` is not satisfied
  --> $DIR/const-closure-in-trait-impl.rs:19:16
   |
LL |         self.a(const || {});
   |              - ^^^^^^^^^^^
   |              |
   |              required by a bound introduced by this call
   |
note: required by a bound in `T::a`
  --> $DIR/const-closure-in-trait-impl.rs:7:29
   |
LL |     fn a(&mut self, f: impl [const] Fn() + [const] Destruct);
   |                             ^^^^^^^^^^^^ required by this bound in `T::a`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
